Mon Nov 12 09:34:14 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.6 released.

Sun Nov 11 14:26:17 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tests/Monotonic_Manual_Event_Test.cpp:
        * tests/Monotonic_Message_Queue_Test.cpp:
        * tests/Monotonic_Task_Test.cpp:
          Further narrowing of preprocessor test to prevent running
          test on unsupported platforms.

Sat Nov 10 11:35:57 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tests/Monotonic_Manual_Event_Test.cpp:
        * tests/Monotonic_Message_Queue_Test.cpp:
        * tests/Monotonic_Task_Test.cpp:
          Further narrowing of preprocessor test to prevent running
          test on unsupported platforms.
          Small logging changes.

Fri Nov  9 10:29:37 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * tests/Monotonic_Manual_Event_Test.cpp:
        * tests/Monotonic_Message_Queue_Test.cpp:
        * tests/Monotonic_Task_Test.cpp:
          Narrowing down the selection test for supported platforms.

Fri Nov  9 08:28:23 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Fixed compile error resulting from previous change.

Wed Nov  7 19:16:47 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Fix for unused arg warnings.

Wed Nov  7 13:51:14 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SSL/SSL_Context.h:
        * ace/SSL/SSL_Context.cpp:
        * protocols/ace/INet/HTTP_Simple_exec.cpp:
          Resolve compile problems with OpenSSL on recent debian/ubuntu
          versions which don't ship SSLv2 anymore

        * debian/patches/series:
        * debian/patches/35_disable_sslv2.diff:
          Patch is not needed anymore

Sat Oct 20 14:13:07 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Timer_Hash_T.h: Added a forward declaration of
          ACE_Event_Handler to ensure ACE compiles properly on certain