@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.1.6 and ACE-6.1.7
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.1.5 and ACE-6.1.6
 ====================================================
 
